test/tests/MutableMethod2.expected
MutableMethod2.panda:18:50: error: expected '(panda.core.String)=&>*()', but found '(panda.core.String)=&>()'
1 error
